@@ -1,5 +1,6 @@
 Revision history for Perl extension RabbitFoot
 
+        - Avoid (additional) issues when in global destruction.
         - Do not set reply_to to an empty string in the header frame.
 
 1.02    Wed Jun 30 11:35:32 2010
